--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="inicio">
             <div class="texto-inicial">
                 <h1 class="titulo">Aquamel</h1>
-                <h2 class="subtitulo">Acessoria Esportiva</h2>
+                <h2 class="subtitulo">Assessoria Esportiva</h2>
             </div>
         </section>
     <section class="parte-botao">
